with some artifacts

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <style>
         #parent {
             position: fixed;
-            bottom: 15%;
-            right: 15%;
-            z-index: 10;
+            bottom: 50px;
+            right: 50px;
+            /*z-index: 10;*/
             /*background: red;*/
         }
         
@@ -20,7 +20,10 @@
             z-index: -1;
         }
     </style>
+
 </head>
+
+
 
 <body>
     <templar></templar>
