--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             top: 30%;
             margin: 5% 5%;
 	    max-width: 1920px;
-	    width: 200px;
+	    width: 500px;
 	    max-height: 1080px;
 	    height: 55%;
 	    border: 1px solid #D61A78;
@@ -132,7 +132,7 @@
 		<span>23-26 Febrero, 2017, Osorno
 	</div>
 	<div id="info">
-<div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ikkunaSpA/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ikkunaSpA/">Ikkuna SpA</a></blockquote></div>
+<div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-width="440" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ikkunaSpA/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ikkunaSpA/">Ikkuna SpA</a></blockquote></div>
 
 	</div>
 	<div id="venue">
