--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 		background-color:rgba(1, 1, 1, 0.5);;
             position: fixed;
             top: 5%;
-            margin: 0 5%;
+	    left: 500px;
+            margin: 0 8%;
 	    max-width: 1920px;
-	    width: 90%;
+	    width: 50%;
 	    max-height: 1080px;
 	    height: 30%;
 	    border: 1px solid #CC6699;
-	    font-size: 5vw;
+	    font-size: 2vw;
 	    line-height: 130%;
 	    text-align: center;
 	    vertical-align: middle; 
@@ -39,12 +40,12 @@
         #info {
 		background-color:rgba(1, 1, 1, 0.5);
             position: fixed;
-            top: 30%;
-            margin: 5% 5%;
+            top: 5%;
+            margin: 0 5%;
 	    max-width: 1920px;
 	    width: 500px;
 	    max-height: 1080px;
-	    height: 55%;
+	    height: 90%;
 	    border: 1px solid #D61A78;
 	    font-size: 1vw;
 	    line-height: 150%;
@@ -60,7 +61,7 @@
 		background-color:rgba(1, 1, 1, 0.5);
             position: fixed;
             top: 30%;
-            margin: 5% 72%;
+            margin: 5% 70%;
 	    max-width: 1920px;
 	    width: 22%;
 	    max-height: 1080px;
