--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
 	    max-width: 1920px;
 	    width: 50%;
 	    max-height: 1080px;
-	    height: 30%;
+	    height: 28%;
 	    border: 1px solid #CC6699;
-	    font-size: 2vw;
-	    line-height: 130%;
+	    font-size: 5vmin;
+	    line-height: 180%;
 	    text-align: center;
 	    vertical-align: middle; 
 	    color: #66CC99 ;
-	    padding-top: 0%;
-	    padding-bottom: 0%;	    
+	    padding: 0 auto;	    
  	    /*z-index: 10;*/
             /*background: red;*/
         }
@@ -45,14 +44,14 @@
 	    max-width: 1920px;
 	    width: 500px;
 	    max-height: 1080px;
-	    height: 90%;
+	    height: 900px;
 	    border: 1px solid #D61A78;
 	    font-size: 1vw;
 	    line-height: 150%;
 	    text-align: left;
 	    vertical-align: middle; 
 	    color: #66CC99;
-	    padding-top: 0%;
+	    padding-top: 1%;
 	    padding-bottom: 0%;	
             /*z-index: 10;*/
             /*background: red;*/
@@ -130,10 +129,10 @@
     </div>
     	<div id="title">
 		<span>Fabricaci&#243;n Digital con Grasshopper</span><br>
-		<span>23-26 Febrero, 2017, Osorno
+		<span>23-26 Febrero 2017, Osorno
 	</div>
 	<div id="info">
-<div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-width="440" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ikkunaSpA/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ikkunaSpA/">Ikkuna SpA</a></blockquote></div>
+<div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-width="440" data-height="880" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ikkunaSpA/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ikkunaSpA/">Ikkuna SpA</a></blockquote></div>
 
 	</div>
 	<div id="venue">
