--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 		<span>23-26 Febrero 2017, Osorno
 	</div>
 	<div id="info">
-<div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-width="440" data-height="880" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ikkunaSpA/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ikkunaSpA/">Ikkuna SpA</a></blockquote></div>
+<div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-width="440" data-height="880" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ikkunaSpA/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ikkunaSpA/">Ikkuna SpA</a></blockquote></div>>
 
 	</div>
 	<div id="venue">
