--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	    width: 50%;
 	    max-height: 1080px;
 	    height: 28%;
-	    border: 1px solid #CC6699;
+	    border: 3px solid #CC6699;
 	    font-size: 5vmin;
 	    line-height: 180%;
 	    text-align: center;
@@ -42,7 +42,7 @@
             top: 5%;
             margin: 0 5%;
 	    max-width: 1920px;
-	    width: 500px;
+	    width: 440px;
 	    max-height: 1080px;
 	    height: 900px;
 	    border: 1px solid #D61A78;
@@ -51,8 +51,7 @@
 	    text-align: left;
 	    vertical-align: middle; 
 	    color: #66CC99;
-	    padding-top: 1%;
-	    padding-bottom: 0%;	
+	    padding: 1% 2%; 	
             /*z-index: 10;*/
             /*background: red;*/
         }
@@ -132,7 +131,7 @@
 		<span>23-26 Febrero 2017, Osorno
 	</div>
 	<div id="info">
-<div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-width="440" data-height="880" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ikkunaSpA/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ikkunaSpA/">Ikkuna SpA</a></blockquote></div>>
+<div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-width="440" data-height="880" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/ikkunaSpA/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ikkunaSpA/">Ikkuna SpA</a></blockquote></div>
 
 	</div>
 	<div id="venue">
