--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	    text-align: left;
 	    vertical-align: middle; 
 	    color: #66CC99;
-	    padding: 1% 0; 	
+	    padding: 0 0; 	
             /*z-index: 10;*/
             /*background: red;*/
         }
