--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             top: 5%;
             margin: 0 5%;
 	    max-width: 1920px;
-	    width: 460px;
+	    width: 475px;
 	    max-height: 1080px;
 	    height: 900px;
 	    border: 1px solid #D61A78;
@@ -51,7 +51,7 @@
 	    text-align: left;
 	    vertical-align: middle; 
 	    color: #66CC99;
-	    padding: 0 0; 	
+	    padding: 1% 0; 	
             /*z-index: 10;*/
             /*background: red;*/
         }
