--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 	</div>
 	<div id="venue">
-		<div class="fb-share-button" data-href="https://www.facebook.com/ikkunaSpA/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FikkunaSpA%2F&amp;src=sdkpreparse">Share</a></div><br>
+		<div class="fb-share-button" data-href="https://www.facebook.com/ikkunaSpA/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FikkunaSpA%2F&amp;src=sdkpreparse">Share</a></div><br><br>
 		<span>Taller practico para la fabricacion digital con Grasshopper/Rhino</span>		
 		<span>Fecha : 23-24-25-26 de Febrero, 2017</span><br>
 		<span>Valor : CLP $148.000.= p/p</span><br>
