--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
 	    padding-left: 20px;
         }
 
+	#fb-share {
+		position:relative;
+		right:10%;
+		bottom:10%;
+	}
+
 	span {
 		margin: 0 15px;
   	    display: inline-block;
@@ -135,7 +141,7 @@
 
 	</div>
 	<div id="venue">
-		<a href="http://www.eventbrite.es/e/entradas-workshop-en-fabricacion-digital-31694542229?ref=ebtnebregn" target="_blank"><img src="https://www.eventbrite.es/custombutton?eid=31694542229" alt="Eventbrite - Workshop en Fabricación Digital" /></a><br><br>
+		<a href="http://www.eventbrite.es/e/entradas-workshop-en-fabricacion-digital-31694542229?ref=ebtnebregn" target="_blank"><img src="https://www.eventbrite.es/custombutton?eid=31694542229" alt="Eventbrite - Workshop en Fabricación Digital" /></a><br>
 		<span>Taller practico para la fabricacion digital con Grasshopper/Rhino</span>		
 		<span>Fecha : 23-24-25-26 de Febrero, 2017</span><br>
 		<span>Valor : CLP $148.000.= p/p</span><br>
@@ -151,7 +157,7 @@
 		<span>Inscripciones :</span> <br><br>
 		<span> Correo : <a href="mailto:info@ikkuna.io">info@ikkuna.io</a></span> <br>
 		<span> Telefono : +562 22284732</span><br>
-		<div class="fb-share-button" data-href="https://www.facebook.com/ikkunaSpA/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FikkunaSpA%2F&amp;src=sdkpreparse">Share</a></div>
+		<div class="fb-share-button" id="fb-share" data-href="https://www.facebook.com/ikkunaSpA/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FikkunaSpA%2F&amp;src=sdkpreparse">Share</a></div>
 	</div>
     <script src="bundle.js" charset="utf-8"></script>
 </body>
