--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
         }
 
 	#fb-share {
-		position:relative;
-		right:10%;
-		bottom:10%;
+		position:fixed;
+		margin: 0 5%;
 	}
 
 	span {
@@ -145,7 +144,7 @@
 		<span>Taller practico para la fabricacion digital con Grasshopper/Rhino</span>		
 		<span>Fecha : 23-24-25-26 de Febrero, 2017</span><br>
 		<span>Valor : CLP $148.000.= p/p</span><br>
-		<span>Direccion : Av. Buenos Aires 737, Osorno, X Region.</span><br>
+		<span>Direccion : Osorno, Chile | Instalaciones de Creapanel Ltda. </span><br>
 		<br>
 		<span>Contenidos : </span>
 		<ul>
@@ -154,7 +153,7 @@
 			<li><span>Exportacion a formato de vectores y control numerico.</span></li>
 			<li><span>Fabricacion y armado de prototipos</span></li>
 		</ul>
-		<span>Inscripciones :</span> <br><br>
+		<span>Contacto y Consultas:</span> <br>
 		<span> Correo : <a href="mailto:info@ikkuna.io">info@ikkuna.io</a></span> <br>
 		<span> Telefono : +562 22284732</span><br>
 		<div class="fb-share-button" id="fb-share" data-href="https://www.facebook.com/ikkunaSpA/" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.facebook.com%2FikkunaSpA%2F&amp;src=sdkpreparse">Share</a></div>
