--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	</div>
 	<div id="venue">
 		<a href="https://welcu.com/ikkuna/workshop-en-fabricacion-digital-con-grasshopperrhino" target="_blank"><img src="https://www.eventbrite.es/custombutton?eid=31694542229" alt="Workshop en Fabricación Digital" /></a><br>
-		<span>Taller practico para la fabricacion digital con Grasshopper::Rhino</span><br><br>		
+		<span>Taller de Fabricacion Digital con Grasshopper::Rhino</span><br><br>		
 		<span>Fecha : 23-24-25-26 de Febrero, 2017</span><br>
 		<span>Early Birds : CLP $120.000.= (hasta el 13 de febrero).	</span><br>
 		<span>General :  CLP $148.000.=</span><br>
