web page february

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Templar App</title>
     <style>
         #parent {
+            /*visibility: hidden;*/
             position: fixed;
             bottom: 50px;
             right: 50px;
