new mdl styles metamorphosis

--- a/index.html
+++ b/index.html
@@ -125,6 +125,29 @@
 
 </script>
 
+<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <title>Android</title>
+
+    <!-- Page styles -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="$$hosted_libs_prefix$$/$$version$$/material.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+    #view-source {
+      position: fixed;
+      display: block;
+      right: 0;
+      bottom: 0;
+      margin-right: 40px;
+      margin-bottom: 40px;
+      z-index: 900;
+    }
+    </style>
+
 </head>
 
 
@@ -173,7 +196,7 @@ src="https://www.facebook.com/tr?id=1866634736891858&ev=PageView&noscript=1"
 
 	</div>
 	<div id="venue">
-		<a href="https://welcu.com/ikkuna/workshop-en-fabricacion-digital-con-grasshopperrhino" target="_blank"><img src="https://www.eventbrite.es/custombutton?eid=31694542229" alt="Workshop en Fabricación Digital" /></a><br>
+		<a href="https://welcu.com/ikkuna/workshop-en-fabricacion-digital-con-grasshopperrhino" target="_blank"><img src="https://www.eventbrite.es/custombutton?eid=31694542229" alt="Workshop en Fabricaciï¿½n Digital" /></a><br>
 		<span>Taller de Fabricacion Digital con Grasshopper::Rhino</span><br><br>		
 		<span>Fecha : 23-24-25-26 de Febrero, 2017</span><br>
 		<span>Early Birds : CLP $120.000.= (hasta el 13 de febrero).	</span><br>
