--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
         <div class="mdl-layout__header-row">
           <span class="android-title mdl-layout-title">
-            <img class="android-logo-image" src="images/android-logo.png">
+            <!-- <img class="android-logo-image" src="images/android-logo.png"> -->
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="android-header-spacer mdl-layout-spacer"></div>
@@ -173,7 +173,7 @@
           </div>
           <!-- Navigation -->
           <div class="android-navigation-container">
-            <nav class="android-navigation mdl-navigation">
+            <!-- <nav class="android-navigation mdl-navigation">
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Phones</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Tablets</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Wear</a>
@@ -181,20 +181,20 @@
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Auto</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">One</a>
               <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Play</a>
-            </nav>
+            </nav> -->
           </div>
           <span class="android-mobile-title mdl-layout-title">
-            <img class="android-logo-image" src="images/android-logo.png">
+            <!-- <img class="android-logo-image" src="images/android-logo.png"> -->
           </span>
           <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
             <i class="material-icons">more_vert</i>
           </button>
-          <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
+          <!-- <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
             <li class="mdl-menu__item">5.0 Lollipop</li>
             <li class="mdl-menu__item">4.4 KitKat</li>
             <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
             <li class="mdl-menu__item">Android History</li>
-          </ul>
+          </ul> -->
         </div>
       </div>
 
