canvas events style test

--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
 
         canvas {
             position: relative;
-	    background: url("background.png")
+	    	background: url("background.png")
             height: 100%;
             width: 100%;
             z-index: -1;
-	    opacity: 0.96;
+	    	opacity: 0.96;
+			pointer-events:none;
         }
     </style>
 
