--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             position: fixed;
             top: 30%;
             margin: 5% 48%;
-	    max-width: 1920px;
+	    max-width: 440px;
 	    width: 34%;
 	    max-height: 1080px;
 	    height: 55%;
@@ -106,12 +106,11 @@
 
         canvas {
             position: relative;
-	    	background: url("background.png")
+	    	    background: url("background.png")
             height: 100%;
             width: 100%;
             z-index: -1;
-	    	opacity: 0.96;
-			pointer-events:none;
+	    	    opacity: 0.96;
         }
     </style>
 
@@ -150,6 +149,25 @@
       z-index: 900;
     }
     </style>
+
+    <!-- Image card -->
+<style>
+.demo-card-image.mdl-card {
+  width: 256px;
+  height: 256px;
+  background: url('../assets/demos/image_card.jpg') center / cover;
+}
+.demo-card-image > .mdl-card__actions {
+  height: 52px;
+  padding: 16px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.demo-card-image__filename {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 500;
+}
+</style>
 
 </head>
 
@@ -200,6 +218,19 @@
       </div>
 
 
+
+    <div class="demo-card-image mdl-card mdl-shadow--2dp">
+  <div class="mdl-card__title mdl-card--expand"></div>
+        <templar></templar> 
+    <div id="parent">
+        <parameter-ui></parameter-ui>
+    </div>
+  <div class="mdl-card__actions">
+    <span class="demo-card-image__filename">This is intended behaviour</span>
+  </div>
+</div>
+
+
 <!-- Facebook Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -226,10 +257,6 @@ src="https://www.facebook.com/tr?id=1866634736891858&ev=PageView&noscript=1"
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=10652951338";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-    <templar></templar> 
-    <div id="parent">
-        <parameter-ui></parameter-ui>
-    </div>
     	<div id="title">
 		<span>Fabricaci&#243;n Digital con Grasshopper</span><br>
 		<span>23-26 Febrero 2017, Osorno</span>
