--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
     <templar></templar>
     <div id="parent">
-        <parameter-ui></parameter-ui>
+        <!-- <parameter-ui></parameter-ui> -->
     </div>
     <script src="bundle.js" charset="utf-8"></script>
 </body>
