--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Templar App</title>
+    <title>Ikkuna SpA</title>
     <style>
         #parent {
             /*visibility: hidden;*/
