--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+<fb-pixel></fb-pixel>
 <head>
     <meta charset="utf-8">
-    <title>Templar App</title>
+    <title>Ikkuna SpA</title>
     <style>
         #parent {
             /*visibility: hidden;*/
@@ -31,7 +31,7 @@
     <div id="parent">
         <parameter-ui></parameter-ui>
     </div>
-    <script src="bundle.js" charset="utf-8"></script>
+    <script src="bundle.min.js" charset="utf-8"></script>
 </body>
 
 </html>
