--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <fb-pixel></fb-pixel>
+
 <head>
     <meta charset="utf-8">
     <title>Ikkuna SpA</title>
@@ -31,7 +32,8 @@
     <div id="parent">
         <parameter-ui></parameter-ui>
     </div>
-    <script src="bundle.min.js" charset="utf-8"></script>
-</body>
+    <!--<script-io></script-io>-->
+    
+<script type="text/javascript" src="bundle/vendor.d41d8cd98f00b204e980.min.js"></script><script type="text/javascript" src="bundle/bundle.7b7d46458eca17ff213e.min.js"></script></body>
 
 </html>
