--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
 <fb-pixel></fb-pixel>
-
+<!-- Facebook Pixel Code -->
+<script>
+    !function (f, b, e, v, n, t, s) {
+        if (f.fbq) return; n = f.fbq = function () {
+            n.callMethod ?
+            n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+        }; if (!f._fbq) f._fbq = n;
+        n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0;
+        t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s)
+    }(window,
+        document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1866634736891858', {
+        em: 'insert_email_variable'
+    });
+    fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1866634736891858&ev=PageView&noscript=1"
+    /></noscript>
+<!-- DO NOT MODIFY -->
+<!-- End Facebook Pixel Code -->
 <head>
     <meta charset="utf-8">
     <title>Ikkuna SpA</title>
@@ -34,6 +53,6 @@
     </div>
     <!--<script-io></script-io>-->
     
-<script type="text/javascript" src="bundle/vendor.d41d8cd98f00b204e980.min.js"></script><script type="text/javascript" src="bundle/bundle.7b7d46458eca17ff213e.min.js"></script></body>
+<script type="text/javascript" src="bundle/vendor.d41d8cd98f00b204e980.min.js"></script><script type="text/javascript" src="bundle/bundle.0a8de50f1674a0160c30.min.js"></script></body>
 
 </html>
