--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <meta charset="utf-8">
     <title>Ikkuna SpA</title>
     <style>
+
+        body {
+            background: black;
+        }
         #parent {
             /*visibility: hidden;*/
             position: fixed;
@@ -107,7 +111,7 @@
         }(document, 'script', 'facebook-jssdk'));
     </script>
     <div class="fb-container">
-        <div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-width="500" data-height="900px"
+        <div class="fb-page" data-href="https://www.facebook.com/ikkunaSpA/" data-tabs="timeline" data-width="475" data-height="900px"
             data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
             <blockquote cite="https://www.facebook.com/ikkunaSpA/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/ikkunaSpA/">Ikkuna SpA</a></blockquote>
         </div>
