--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/creative.min.css" rel="stylesheet">
+    <link href="css/creative.css" rel="stylesheet">
 
   </head>
 
@@ -31,7 +31,10 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/ikkuna_general_negro.png" alt="Ikkuna SpA - Chile"></a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+          <!--  <img src="img/ikkuna_general_negro.png" alt="Ikkuna SpA - Chile">
+          ikkuna  -->
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,12 +62,13 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Tech courses for everyone : Algorithms for the most demanding tasks.</strong>
+              <strong>Tech courses for everyone</strong>
+              <strong>Algorithms for the most demanding tasks.</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Ikkuna Courses can help you build better front and backends for demanding environments! Be ahead with our online and classroom courses!</p>
+            <p class="text-faded mb-5">Ikkuna can help you build better front and backends for demanding environments! Be ahead with our online and classroom courses!</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
@@ -77,7 +81,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Choose the algorithm you need, select your environment, deploy! High demand is our challenge. You have the problem, we offer the solution. Think outside the box.</p>
+            <p class="text-faded mb-4">Choose the best algorithm, select your environment, deploy! High demand is our challenge. You deliver, we offer the solution. Think outside the box.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
           </div>
         </div>
@@ -99,28 +103,28 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Everyone Everywhere</h3>
-              <p class="text-muted mb-0">We work with application services available everywhere.</p>
+              <p class="text-muted mb-0">We work with cloud services available everywhere. AWS, Google Cloud, Heroku, Cloudant, you name it!</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Ready to deploy</h3>
-              <p class="text-muted mb-0">We manage lists of algorithms to deploy at demand.</p>
+              <p class="text-muted mb-0">We manage lists of algorithms. We deploy on demand. Our prices are elastic.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Adaptability</h3>
-              <p class="text-muted mb-0">Constant updates for algorithm design and code implementation is a priority. We are architecture centered, language agnostic. We breathe computer science.</p>
+              <p class="text-muted mb-0">Constant updates. Our architecture centered scheme is language agnostic.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Everybody learns.</h3>
-              <p class="text-muted mb-0">We make sure you and your colleages understand every aspects of the algorithms and deployments we provide, in course as for comporative solutions.</p>
+              <p class="text-muted mb-0">You and your colleages will understand every aspects of the algorithms and deployments we provide.</p>
             </div>
           </div>
         </div>
