--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-          <!--  <img src="img/ikkuna_general_negro.png" alt="Ikkuna SpA - Chile">
-          ikkuna  -->
+          <!--  <img src="img/ikkuna_general_negro.png" alt="Ikkuna SpA - Chile"> -->
+          ikkuna
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -62,13 +62,13 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Tech courses for everyone</strong>
+              <strong>Tech courses for everyone</strong><br>
               <strong>Algorithms for the most demanding tasks.</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Ikkuna can help you build better front and backends for demanding environments! Be ahead with our online and classroom courses!</p>
+            <p class="text-faded mb-5">Ikkuna can help you build better solutions for demanding environments! Stay ahead with our courses!</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
