--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/creative.css" rel="stylesheet">
+    <link href="css/creative.min.css" rel="stylesheet">
 
   </head>
 
@@ -131,7 +131,7 @@
       </div>
     </section>
 
-    <section class="p-0" id="portfolio">
+    <!--  <section class="p-0" id="portfolio">
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
@@ -226,7 +226,7 @@
           </div>  -->
         </div>
       </div>
-    </section>
+    </section>  -->
 
     <section class="bg-dark text-white">
       <div class="container text-center">
