--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Tech courses for everyone</strong><br>
+              <strong>Tech courses for everyone.</strong><br>
               <strong>Algorithms for the most demanding tasks.</strong>
             </h1>
             <hr>
@@ -101,7 +101,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-figther-jet text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fas fa-figther-jet text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Everyone Everywhere</h3>
               <p class="text-muted mb-0">We work with cloud services available everywhere. AWS, Google Cloud, Heroku, Cloudant, you name it!</p>
             </div>
