--- a/index.html
+++ b/index.html
@@ -101,28 +101,28 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fas fa-figther-jet text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-fighter-jet text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Everyone Everywhere</h3>
               <p class="text-muted mb-0">We work with cloud services available everywhere. AWS, Google Cloud, Heroku, Cloudant, you name it!</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-code-branch text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Ready to deploy</h3>
               <p class="text-muted mb-0">We manage lists of algorithms. We deploy on demand. Our prices are elastic.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-connectdevelop text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Adaptability</h3>
               <p class="text-muted mb-0">Constant updates. Our architecture centered scheme is language agnostic.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-linode text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Everybody learns.</h3>
               <p class="text-muted mb-0">You and your colleages will understand every aspects of the algorithms and deployments we provide.</p>
             </div>
