--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-code-branch text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-docker text-primary mb-3 sr-icons"></i>
               <h3 class="mb-3">Ready to deploy</h3>
               <p class="text-muted mb-0">We manage lists of algorithms. We deploy on demand. Our prices are elastic.</p>
             </div>
