--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-fighter-jet text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Everyone Everywhere</h3>
+              <h3 class="mb-3">Everyone everywhere</h3>
               <p class="text-muted mb-0">We work with cloud services available everywhere. AWS, Google Cloud, Heroku, Cloudant, you name it!</p>
             </div>
           </div>
