--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 
       gtag('config', 'UA-113781151-1');
     </script>
+    
+    <script>
+        (function(d,t) {
+          var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+          g.src="https://app.chaskiq.io/embed.js"
+          s.parentNode.insertBefore(g,s);
+          g.onload=function(){
+            new window.ChaskiqMessengerEncrypted({
+              domain: 'https://app.chaskiq.io',
+              ws:  'wss://app.chaskiq.io/cable',
+              app_id: "jb7Sx22G77by7pIt9Q2g5g",
+              data: "YOUR_ENCRYPTED_JWE_DATA",
+              lang: "USER_LANG_OR_DEFAULTS_TO_BROWSER_LANG" 
+            })
+          }
+        })(document,"script");
+     </script>
 
       <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
