--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
             new window.ChaskiqMessengerEncrypted({
               domain: 'https://app.chaskiq.io',
               ws:  'wss://app.chaskiq.io/cable',
-              app_id: "jb7Sx22G77by7pIt9Q2g5g",
-              data: "YOUR_ENCRYPTED_JWE_DATA",
-              lang: "USER_LANG_OR_DEFAULTS_TO_BROWSER_LANG" 
-            })
+              app_id: "jb7Sx22G77by7pIt9Q2g5g"
           }
         })(document,"script");
      </script>
